JEKT-136 BWI completed ❇️ New     - Pipeline        - SAP_01_MD_SLS_ORDR_LINE_bwi
🔁 Modified
    - Dataset
       - DS_SAP_01_VBAK
       - DS_SAP_01_VBAP
       - MD_SLS_ORDR_LINE
       - DS_SAP_01_VBKD
    - Pipeline
       - SAP_01_MD_SLS_ORDR_LINE_bbn

--- a/src/datasets/DS_SAP_01_VBKD/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_VBKD/pbt_aspects.yml
@@ -590,21 +590,14 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: VTREF
+  - name: FARR_RELTYPE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PEROP_BEG
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PEROP_END
+  - name: J_1TPBUPL
     type: string
     nullable: true
     metadata:
@@ -639,13 +632,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: COMPREAS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: MNDID
     type: string
     nullable: true
@@ -674,28 +660,56 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_IND_CODE1
+  - name: VTREF
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_IND_CODE2
+  - name: _DATAAGING
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: FARR_RELTYPE
+  - name: INCOV
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: J_1TPBUPL
+  - name: INCO2_L
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: INCO3_L
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PEROP_BEG
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PEROP_END
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: COMPREAS
     type: string
     nullable: true
     metadata:
