--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1352,7 +1352,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-12 18:36:10'
-    modifiedAt: '2023-04-12 18:50:41'
+    modifiedAt: '2023-04-12 19:43:35'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TVAGT
@@ -1363,6 +1363,29 @@ pipelines:
       - datasets/DS_SAP_01_TVRO
       - datasets/DS_SAP_01_TVROT
       - datasets/DS_SAP_01_TVST
+      - datasets/DS_SAP_01_TVSTT
+      - datasets/DS_SAP_01_VBAK
+      - datasets/DS_SAP_01_VBAP
+      - datasets/DS_SAP_01_VBKD
+      outputs:
+      - datasets/MD_SLS_ORDR_LINE
+    subgraphs: []
+    dependencies: {}
+  pipelines/SAP_01_MD_SLS_ORDR_LINE_bwi:
+    name: SAP_01_MD_SLS_ORDR_LINE_bwi
+    description: ''
+    author: fsano1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-12 19:46:41'
+    modifiedAt: '2023-04-12 21:06:36'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_TVAGT
+      - datasets/DS_SAP_01_TVAPT
+      - datasets/DS_SAP_01_TVRO
+      - datasets/DS_SAP_01_TVROT
       - datasets/DS_SAP_01_TVSTT
       - datasets/DS_SAP_01_VBAK
       - datasets/DS_SAP_01_VBAP
@@ -1962,7 +1985,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-12 19:01:00'
+    modifiedAt: '2023-04-12 21:06:36'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7137,7 +7160,7 @@ datasets:
     description: ''
     author: fsano1@its.jnj.com
     createdAt: '2023-03-20 12:44:00'
-    modifiedAt: '2023-04-12 18:45:40'
+    modifiedAt: '2023-04-12 20:33:22'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7152,7 +7175,7 @@ datasets:
     description: ''
     author: fsano1@its.jnj.com
     createdAt: '2023-03-20 19:10:20'
-    modifiedAt: '2023-04-12 18:21:58'
+    modifiedAt: '2023-04-12 20:33:31'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7167,7 +7190,7 @@ datasets:
     description: ''
     author: fsano1@its.jnj.com
     createdAt: '2023-03-21 18:04:47'
-    modifiedAt: '2023-04-12 17:18:28'
+    modifiedAt: '2023-04-12 20:33:38'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
