--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1279,7 +1279,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-20 12:41:02'
-    modifiedAt: '2023-04-12 17:35:47'
+    modifiedAt: '2023-04-12 21:09:26'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TVAGT
@@ -1386,6 +1386,34 @@ pipelines:
       - datasets/DS_SAP_01_TVAPT
       - datasets/DS_SAP_01_TVRO
       - datasets/DS_SAP_01_TVROT
+      - datasets/DS_SAP_01_TVSTT
+      - datasets/DS_SAP_01_VBAK
+      - datasets/DS_SAP_01_VBAP
+      - datasets/DS_SAP_01_VBKD
+      outputs:
+      - datasets/MD_SLS_ORDR_LINE
+    subgraphs: []
+    dependencies: {}
+  pipelines/SAP_01_MD_SLS_ORDR_LINE_FSN:
+    name: SAP_01_MD_SLS_ORDR_LINE_FSN
+    description: ''
+    author: fsano1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-12 21:13:29'
+    modifiedAt: '2023-04-12 21:35:04'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_TVAGT
+      - datasets/DS_SAP_01_TVAPT
+      - datasets/DS_SAP_01_TVM1T
+      - datasets/DS_SAP_01_TVM2T
+      - datasets/DS_SAP_01_TVM3T
+      - datasets/DS_SAP_01_TVM5T
+      - datasets/DS_SAP_01_TVRO
+      - datasets/DS_SAP_01_TVROT
+      - datasets/DS_SAP_01_TVST
       - datasets/DS_SAP_01_TVSTT
       - datasets/DS_SAP_01_VBAK
       - datasets/DS_SAP_01_VBAP
@@ -1985,7 +2013,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-12 21:06:36'
+    modifiedAt: '2023-04-12 21:35:04'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7160,7 +7188,7 @@ datasets:
     description: ''
     author: fsano1@its.jnj.com
     createdAt: '2023-03-20 12:44:00'
-    modifiedAt: '2023-04-12 20:33:22'
+    modifiedAt: '2023-04-12 21:22:50'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7175,7 +7203,7 @@ datasets:
     description: ''
     author: fsano1@its.jnj.com
     createdAt: '2023-03-20 19:10:20'
-    modifiedAt: '2023-04-12 20:33:31'
+    modifiedAt: '2023-04-12 21:19:47'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7190,7 +7218,7 @@ datasets:
     description: ''
     author: fsano1@its.jnj.com
     createdAt: '2023-03-21 18:04:47'
-    modifiedAt: '2023-04-12 20:33:38'
+    modifiedAt: '2023-04-12 21:20:17'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7265,7 +7293,7 @@ datasets:
     description: ''
     author: fsano1@its.jnj.com
     createdAt: '2023-03-21 19:43:57'
-    modifiedAt: '2023-04-12 15:22:51'
+    modifiedAt: '2023-04-12 21:31:48'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
