--- a/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
@@ -464,6 +464,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: MATL_GRP_1_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: MATL_GRP_2_MVGR2
     type: string
     nullable: true
@@ -471,7 +478,21 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: MATL_GRP_2_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: MATL_GRP_3
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_GRP_3_DESC
     type: string
     nullable: true
     metadata:
@@ -492,6 +513,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: MATL_GRP_5_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: ORDR_NUM
     type: string
     nullable: true
@@ -501,6 +529,62 @@ schema:
       tags: []
   - name: COND_PRC_UNIT
     type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SHIPPING_PT_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LD_TIME_WRK_HRS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PICK_PACK_TIME
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: WRK_TIMES
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SHIPPING_PT_FCTRY_CAL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LD_TIME_WRK_DAYS
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PICK_PACK_TIME_WRK_DAYS
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SHIPPING_PT_CTRY
+    type: string
     nullable: true
     metadata:
       description: ''
@@ -731,6 +815,27 @@ schema:
       mappings: []
       tags: []
   - name: REF_ITM_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DTRMN_PICK_PACK_TIME
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SHIPPING_PT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CTRY_CD
     type: string
     nullable: true
     metadata:
@@ -1577,76 +1682,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: RTN_RSN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: RTRN_RFND_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: APPR_BLK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: NUM_COND_REC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: RISK_RLVNT_SLS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TAX_CD_AUTMT_DTRMN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MAN_TAX_CD_RSN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TAX_INCT_TYPE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TAX_SUBJ_SUBST_TRIB
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: GLOBL_ITM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: RTG_NUM_OPS_ORDR_AUFPL_OLC
     type: string
     nullable: true
@@ -1703,13 +1738,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: BGT_PER
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: IUID_RLVNT_CUST
     type: string
     nullable: true
@@ -1724,111 +1752,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: STD_WBS_ELMNT_PROJ_INCPT_VIA_SD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: WRK_PER
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TRSRY_ACCT_SYM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BUSN_EV_TYPE_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MOD_ALLW
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CNCL_ALLW
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: LIST_RSPCT_PMT_METHDS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BUSN_PTNR_NUM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: RPTG_FREQ
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TRAD_PTNR_BUSN_AREA
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: RTG_NUM_OPS_ORDR_AUFPL_OAA
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: INTRNL_CNTR
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: NUM_OF_RESV_DEPN_RQR
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ITM_NUM_RESV_DEPN_RQR
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CLM_ITM_NUM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: PRC_AND_EXCH_RT_DTTM
     type: timestamp
     nullable: true
@@ -1836,182 +1759,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: REQ_SGMNT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: LOC_PHY_HANDOVR_GOODS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: HANDOVR_LOC_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: US_FED_GOVT_FLD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CHAR_VAL_1
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CHAR_VAL_2
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CHAR_VAL_3
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SESS_REC_CRT_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CMMDTY_CD_POL
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: EXTD_KEY_ANNEX_PKG
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SEASN_YR
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SEASN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FSHN_CLCT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FSHN_THEME
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: COND_REC_NUM_SEASN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SEASN_DTRMN_REF_DOC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CNCL_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PSM_PFM_SPLT_ID
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: VAS_RLVNT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ITM_NUM_SD_DOC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TRX_NUM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ITM_GRP
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ITM_NUM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: VAS_DTRMN_REF_DOC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: GRID_COND_REC_NUM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: HI_LVL_ITM_PRTL_QTY_REJ
+  - name: MATL_GRP_4_DESC
     type: string
     nullable: true
     metadata:
