JEKT-136 ❇️ New     - Dataset        - DS_SAP_TVM4T
🔁 Modified
    - Pipeline
       - SAP_01_MD_SLS_ORDR_LINE_FSN
    - Dataset
       - DS_SAP_01_TVM3T

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1402,7 +1402,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-12 21:13:29'
-    modifiedAt: '2023-04-12 21:35:04'
+    modifiedAt: '2023-04-12 21:48:36'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TVAGT
@@ -1418,6 +1418,7 @@ pipelines:
       - datasets/DS_SAP_01_VBAK
       - datasets/DS_SAP_01_VBAP
       - datasets/DS_SAP_01_VBKD
+      - datasets/DS_SAP_TVM4T
       outputs:
       - datasets/MD_SLS_ORDR_LINE
     subgraphs: []
@@ -7293,7 +7294,7 @@ datasets:
     description: ''
     author: fsano1@its.jnj.com
     createdAt: '2023-03-21 19:43:57'
-    modifiedAt: '2023-04-12 21:31:48'
+    modifiedAt: '2023-04-12 21:38:46'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7423,6 +7424,21 @@ datasets:
         author: fsano1@its.jnj.com
         createdAt: '2023-04-10 17:31:01'
         modifiedAt: '2023-04-10 17:31:01'
+  datasets/DS_SAP_TVM4T:
+    name: DS_SAP_TVM4T
+    description: ''
+    author: fsano1@its.jnj.com
+    createdAt: '2023-04-12 21:43:14'
+    modifiedAt: '2023-04-12 21:46:27'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: fsano1@its.jnj.com
+        createdAt: '2023-04-12 21:43:15'
+        modifiedAt: '2023-04-12 21:43:15'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
