--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -636,19 +636,20 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/JDE_01_MD_SHIP_MTK:
-    name: JDE_01_MD_SHIP_MTK
+    name: JDE_01_MD_SHIP_MTR_BW2_GMD_JES
     description: ''
     author: hgermi1@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-10 19:20:53'
-    modifiedAt: '2023-04-12 14:52:25'
+    modifiedAt: '2023-04-12 23:19:26'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4211
       - datasets/DS_JDE_01_F43121
-      outputs: []
+      outputs:
+      - datasets/MD_SHIP
     subgraphs: []
     dependencies: {}
 datasets:
@@ -1377,7 +1378,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-04-12 14:57:53'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -4017,7 +4018,7 @@ datasets:
     description: ''
     author: hgermi1@its.jnj.com
     createdAt: '2023-04-12 12:49:35'
-    modifiedAt: '2023-04-12 13:14:11'
+    modifiedAt: '2023-04-12 15:04:42'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -4032,7 +4033,7 @@ datasets:
     description: ''
     author: hgermi1@its.jnj.com
     createdAt: '2023-04-12 12:51:34'
-    modifiedAt: '2023-04-12 12:51:34'
+    modifiedAt: '2023-04-12 15:05:03'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
