❇️ JEKT-305     - Pipeline        - JES_01_MD_SHIP_JET_JSW_DEU_JEM_SJD_DJD
🔁 Modified
    - Dataset
       - MD_SHIP
       - DS_JDE_01_F43121

--- a/src/datasets/MD_SHIP/pbt_aspects.yml
+++ b/src/datasets/MD_SHIP/pbt_aspects.yml
@@ -11,7 +11,7 @@ schema:
       tags: []
   - name: SHIP_NUM
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
