--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -652,6 +652,23 @@ pipelines:
       - datasets/MD_SHIP
     subgraphs: []
     dependencies: {}
+  pipelines/JES_01_MD_SHIP_JET_JSW_DEU_JEM_SJD_DJD:
+    name: JES_01_MD_SHIP_JET_JSW_DEU_JEM_SJD_DJD
+    description: ''
+    author: hgermi1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-12 23:23:22'
+    modifiedAt: '2023-04-12 23:48:17'
+    datasets:
+      inputs:
+      - datasets/DS_JDE_01_F4211
+      - datasets/DS_JDE_01_F43121
+      outputs:
+      - datasets/MD_SHIP
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -1378,7 +1395,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-12 14:57:53'
+    modifiedAt: '2023-04-12 23:48:17'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -4033,7 +4050,7 @@ datasets:
     description: ''
     author: hgermi1@its.jnj.com
     createdAt: '2023-04-12 12:51:34'
-    modifiedAt: '2023-04-12 15:05:03'
+    modifiedAt: '2023-04-12 23:33:18'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
