❇️ JEKT-305     - Dataset        - DS_SAP_02_VTTK     - Pipeline        - SAP_01_MD_SHIP_FSN
🔁 Modified
    - Dataset
       - MD_SHIP

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -669,6 +669,22 @@ pipelines:
       - datasets/MD_SHIP
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_01_MD_SHIP_FSN:
+    name: SAP_01_MD_SHIP_FSN
+    description: ''
+    author: hgermi1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-13 01:36:24'
+    modifiedAt: '2023-04-13 01:50:34'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_02_VTTK
+      outputs:
+      - datasets/MD_SHIP
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -1395,7 +1411,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-12 23:48:17'
+    modifiedAt: '2023-04-13 01:50:00'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -4060,6 +4076,21 @@ datasets:
         author: hgermi1@its.jnj.com
         createdAt: '2023-04-12 12:51:34'
         modifiedAt: '2023-04-12 12:51:34'
+  datasets/DS_SAP_02_VTTK:
+    name: DS_SAP_02_VTTK
+    description: ''
+    author: hgermi1@its.jnj.com
+    createdAt: '2023-04-13 01:47:02'
+    modifiedAt: '2023-04-13 01:47:02'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: hgermi1@its.jnj.com
+        createdAt: '2023-04-13 01:47:02'
+        modifiedAt: '2023-04-13 01:47:02'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
