❇️ JEKT-305     - Dataset        - DS_SAP_03_VTTK     - Pipeline        - SAP_01_MD_SHIP_MBP
🔁 Modified
    - Dataset
       - MD_SHIP
       - DS_SAP_02_VTTK

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -685,6 +685,22 @@ pipelines:
       - datasets/MD_SHIP
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_01_MD_SHIP_MBP:
+    name: SAP_01_MD_SHIP_MBP
+    description: ''
+    author: hgermi1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-13 01:55:13'
+    modifiedAt: '2023-04-13 02:03:16'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_03_VTTK
+      outputs:
+      - datasets/MD_SHIP
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -1411,7 +1427,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-13 01:50:00'
+    modifiedAt: '2023-04-13 02:03:16'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -4081,7 +4097,7 @@ datasets:
     description: ''
     author: hgermi1@its.jnj.com
     createdAt: '2023-04-13 01:47:02'
-    modifiedAt: '2023-04-13 01:47:02'
+    modifiedAt: '2023-04-13 01:55:40'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -4091,6 +4107,21 @@ datasets:
         author: hgermi1@its.jnj.com
         createdAt: '2023-04-13 01:47:02'
         modifiedAt: '2023-04-13 01:47:02'
+  datasets/DS_SAP_03_VTTK:
+    name: DS_SAP_03_VTTK
+    description: ''
+    author: hgermi1@its.jnj.com
+    createdAt: '2023-04-13 02:01:09'
+    modifiedAt: '2023-04-13 02:01:09'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: hgermi1@its.jnj.com
+        createdAt: '2023-04-13 02:01:09'
+        modifiedAt: '2023-04-13 02:01:09'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
