--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -643,7 +643,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-10 19:20:53'
-    modifiedAt: '2023-04-12 23:19:26'
+    modifiedAt: '2023-04-13 02:13:32'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4211
@@ -660,11 +660,11 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-12 23:23:22'
-    modifiedAt: '2023-04-13 01:32:40'
+    modifiedAt: '2023-04-13 02:20:14'
     datasets:
       inputs:
-      - datasets/DS_JDE_01_F4211
-      - datasets/DS_JDE_01_F43121
+      - datasets/DS_JDE_02_F4211
+      - datasets/DS_JDE_02_F43121
       outputs:
       - datasets/MD_SHIP
     subgraphs: []
@@ -1427,7 +1427,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-13 02:03:16'
+    modifiedAt: '2023-04-13 02:15:44'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -4122,6 +4122,36 @@ datasets:
         author: hgermi1@its.jnj.com
         createdAt: '2023-04-13 02:01:09'
         modifiedAt: '2023-04-13 02:01:09'
+  datasets/DS_JDE_02_F4211:
+    name: DS_JDE_02_F4211
+    description: ''
+    author: hgermi1@its.jnj.com
+    createdAt: '2023-04-13 02:17:15'
+    modifiedAt: '2023-04-13 02:17:15'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: hgermi1@its.jnj.com
+        createdAt: '2023-04-13 02:17:15'
+        modifiedAt: '2023-04-13 02:17:15'
+  datasets/DS_JDE_02_F43121:
+    name: DS_JDE_02_F43121
+    description: ''
+    author: hgermi1@its.jnj.com
+    createdAt: '2023-04-13 02:19:30'
+    modifiedAt: '2023-04-13 02:19:30'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: hgermi1@its.jnj.com
+        createdAt: '2023-04-13 02:19:30'
+        modifiedAt: '2023-04-13 02:19:30'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
